# stream-prompt-manager

./: .env.example  .gitignore  AGENTS.MD  App.tsx  DEPLOY_CHECKLIST.md  README.md  constants.tsx  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  req.md  theme_tags_ui_plan_and_build.md  types.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  database.py  main.py  models.py
backend/app/routes/: __init__.py  compositions.py  insights.py  prompts.py  public.py  search.py  stacks.py  tag_colors.py
backend/app/services/: __init__.py  insights.py  openrouter.py
components/: BuildStream.tsx  EditorOverlay.tsx  LibraryManager.tsx  LiveCompiler.tsx  Mixer.tsx  PromptBlock.tsx  PromptCard.tsx  PromptGrid.tsx  QuickCreator.tsx  SettingsOverlay.tsx  TagFilterBar.tsx
frontend/: .env.example  App.tsx  AppRouter.tsx  Dockerfile  constants.tsx  index.css  index.html  index.tsx  metadata.json  navigation.ts  nginx.conf  package-lock.json  package.json  types.ts
frontend/components/: BlockLibrary.tsx  CompositionStudio.tsx  EditorOverlay.tsx  LibraryManager.tsx  LibraryOverlay.tsx  LiveCompiler.tsx  Mixer.tsx  PromptCard.tsx  PromptGrid.tsx  PublicStackPage.tsx  QuickCreator.tsx  SettingsOverlay.tsx  StackSettingsOverlay.tsx  StacksBar.tsx  TagFilterBar.tsx
frontend/components/sessions/: AttachmentCard.tsx  AttachmentsPanel.tsx  (+6 more)
frontend/hooks/: useObjectUrl.ts  useSessions.ts
frontend/lib/: sessionsDb.ts
frontend/services/: api.ts
scripts/: generate-og-images.mjs
services/: db.ts  geminiService.ts
